# voiceflow

backend/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_admins_table.py
backend/app/: main.py
backend/app/api/routers/: __init__.py  admin.py  admin_auth.py  admin_system.py  auth.py  content.py  media.py  speaker_id.py  streaming.py  users.py  voice_stt.py  voice_tts.py  workspaces.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: admin.py  content.py  user.py  voice_profile.py  workspace.py
backend/app/schemas/: admin.py  content.py  user.py
backend/app/services/: cloudinary_service.py  lang_detect_service.py  nlu_service.py  redis_service.py  speaker_id_service.py  stt_whisper_service.py  tts_service.py
backend/app/tasks/: celery_app.py
docker/: docker-compose.yml
frontend/voiceflow-web/: .env.local  README.md  angular.json  package-lock.json  package.json
frontend/voiceflow-web/public/: manifest.webmanifest
frontend/voiceflow-web/src/: index.html
frontend/voiceflow-web/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
frontend/voiceflow-web/src/app/core/guards/: admin.guard.ts  auth.guard.ts
frontend/voiceflow-web/src/app/pages/: admin-dashboard.page.ts  admin-login.page.ts  admin-register.page.ts  dashboard.page.ts  login.page.ts  register.page.ts  workspace.page.ts
frontend/voiceflow-web/src/assets/i18n/: en.json  es.json
(+8 files in other folders)
